SigmaCodebackup3rdSep/objects/Stock_Check__c.object
<CustomObject>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>InProgress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stock_Check_Date__c</fullName>
        <label>Stock Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stock_Check_User_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stock Check User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Stock_Check</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stock_Check_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stock Check User</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Stock Checks</relationshipLabel>
        <relationshipName>Stock_Checks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Stock Check</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Stock_Check_Date__c</columns>
        <columns>Stock_Check_User__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SCN-{0000}</displayFormat>
        <label>Stock Check Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock Check</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>